// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SubscribeJobsModalButton renders confirmation if subscription is submitted 1`] = `
<Fragment>
  <LinkLikeButton
    icon="mail"
    onClick={[Function]}
  >
    <Icon
      type="mail"
    />
    <ResponsiveView
      min="sm"
      render={[Function]}
    />
  </LinkLikeButton>
  <Modal
    afterClose={[Function]}
    confirmLoading={false}
    footer={null}
    maskTransitionName="fade"
    okType="primary"
    onCancel={[Function]}
    title="Subscribe to the INSPIRE job mailing list"
    transitionName="zoom"
    visible={false}
    width={520}
  >
    <ModalSuccessResult>
      <Paragraph>
        You have successfully subscribed!
      </Paragraph>
      <Paragraph>
        You will receive a weekly update on new INSPIRE job listings every Monday.
      </Paragraph>
    </ModalSuccessResult>
  </Modal>
</Fragment>
`;

exports[`SubscribeJobsModalButton renders with error alert if hasError 1`] = `
<Fragment>
  <LinkLikeButton
    icon="mail"
    onClick={[Function]}
  >
    <Icon
      type="mail"
    />
    <ResponsiveView
      min="sm"
      render={[Function]}
    />
  </LinkLikeButton>
  <Modal
    afterClose={[Function]}
    confirmLoading={false}
    footer={null}
    maskTransitionName="fade"
    okType="primary"
    onCancel={[Function]}
    title="Subscribe to the INSPIRE job mailing list"
    transitionName="zoom"
    visible={false}
    width={520}
  >
    <div>
      <div
        className="mb3"
      >
        <Alert
          description="Could not subscribe, please try again."
          showIcon={true}
          type="error"
        />
      </div>
      <div
        className="mb3"
      >
        To be notified via email of new jobs in High Energy Physics, please fill in the following information:
      </div>
      <SubscribeJobsForm
        onSubmit={[Function]}
      />
    </div>
  </Modal>
</Fragment>
`;

exports[`SubscribeJobsModalButton renders with initial state 1`] = `
<Fragment>
  <LinkLikeButton
    icon="mail"
    onClick={[Function]}
  >
    <Icon
      type="mail"
    />
    <ResponsiveView
      min="sm"
      render={[Function]}
    />
  </LinkLikeButton>
  <Modal
    afterClose={[Function]}
    confirmLoading={false}
    footer={null}
    maskTransitionName="fade"
    okType="primary"
    onCancel={[Function]}
    title="Subscribe to the INSPIRE job mailing list"
    transitionName="zoom"
    visible={false}
    width={520}
  >
    <div>
      <div
        className="mb3"
      >
        To be notified via email of new jobs in High Energy Physics, please fill in the following information:
      </div>
      <SubscribeJobsForm
        onSubmit={[Function]}
      />
    </div>
  </Modal>
</Fragment>
`;
